# semiquaintum_QSI

./: .gitignore  .rgignore  README.md  meson.build  meson.options  workrc  workrc_template
common/: meson.build
common/include/: abstract_manager.hpp  energy_manager.hpp  observable_manager.hpp  pyro_data.hpp  ssf_manager.hpp  transverse_corr_manager.hpp
hpc_driver/: bmark_moves.slurm  bmark_runtime.slurm  cluster_stats.slurm  sweep_Jpm0_L12.slurm  sweep_Jpm0_L8.slurm  sweep_Jpm_L4.slurm  sweep_Jpm_L4_p0.05.slurm  sweep_Jpm_L6_p0.08.slurm  sweep_Jpm_L6_p0.10.slurm  sweep_Jpm_L8_p0.05.slurm  sweep_Jpm_L8_p0.08.slurm  sweep_Jpm_L8_p0.10.slurm  sweep_clean.slurm  sweep_converge.slurm  sweep_converge_anneal_only.slurm
percol/: bench_autocorr.cpp  glass_stats.cpp  glass_stats.hpp  meson.build  pyro_dilution.cpp  sim_bits.hpp  sq_pyrochlore.cpp  sq_pyrochlore_dump.cpp  sq_pyrochlore_exact.cpp  sq_pyrochlore_muca.cpp
percol/include/: geometry.hpp  monte_carlo.hpp  quantum_cluster.hpp  sim_bits.hpp  unionfind.hpp
percol/src/: monte_carlo.cpp  quantum_cluster.cpp
scripts/: acc_cluster_hist.py  acc_heat_capacity.py  acc_runs.py  autobench.py  cluster_hist_src.txt  gaullin_Cv_rough.csv  generate_theory.py  plot.gnuplot  plot_fig3.py  plot_fig4.py  plot_glass_stats.py  plot_heat_capacity.py  plot_hhl.py  plot_hist.py  plot_percol_transitions.py  plot_quantum_fraction.py  plot_ssf.py  testpercol.sh  visualise_cluster_spins.py
scripts/final/: plot_L8_p0.05.sh  plot_L8_p0.05_v2.sh
test/: bench_autocorr.cpp  meson.build  sq_pyrochlore_compare.cpp  test_energy_helpers.cpp  test_monopole_worm.cpp  test_ssf_manual.cpp  test_worm.cpp  test_worm_step_symmetry.cpp
