option('hdf5_inc', type: 'string', value: '', description: 
  'Path to custom HDF5 installation include dir')
option('hdf5_lib', type: 'string', value: '', description:  
  'Path to custom HDF5 installation lib dir')

option('mpi_root', type: 'string', value: '', description: 'Path to custom MPI installation (prefix directory)')
