
compare_bin = executable('sq_pyrochlore_compare', 'sq_pyrochlore_compare.cpp',
  include_directories:percol_inc,
  link_with: [percol_lib],
  dependencies: [main_deps, eigen_dep, hdf5_dep]
 )

test_worm_bin = executable('test_worm', 'test_worm.cpp',
  include_directories:percol_inc,
  link_with: [percol_lib],
  dependencies: [main_deps, eigen_dep, hdf5_dep]
 )

worm_step_sym_bin = executable('test_worm_step_symmetry', 'test_worm_step_symmetry.cpp',
  include_directories:percol_inc,
  link_with: [percol_lib],
  dependencies: [main_deps, eigen_dep, hdf5_dep]
 )

test_monopole_worm_bin = executable('test_monopole_worm', 'test_monopole_worm.cpp',
  include_directories:percol_inc,
  link_with: [percol_lib],
  dependencies: [main_deps, eigen_dep, hdf5_dep]
 )

test_energy_helpers_bin = executable('test_energy_helpers', 'test_energy_helpers.cpp',
  include_directories:percol_inc,
  link_with: [percol_lib],
  dependencies: [main_deps, eigen_dep, hdf5_dep]
 )

bench_autocorr_bin = executable('bench_autocorr', 'bench_autocorr.cpp',
  include_directories:percol_inc,
  link_with: [percol_lib],
  dependencies: [main_deps, eigen_dep, hdf5_dep]
 )

test_ssf_manual_bin = executable('test_ssf_manual', 'test_ssf_manual.cpp',
  include_directories:percol_inc,
  link_with: [percol_lib],
  dependencies: [main_deps, eigen_dep, hdf5_dep]
 )

